--- a/Week - 1/1.ipynb
+++ b/Week - 1/1.ipynb
@@ -414,8 +414,6 @@
     "#     \"diet\": \"Unknown\",\n",
     "#     \"flavor_profile\": \"Unknown\"\n",
     "# })\n",
-    "\n",
-    "\n",
     "# flavor_test  = [\"flavor_profile\"]\n",
     "\n",
     "spicy_ing = df[df[\"flavor_profile\"] == \"spicy\"][\"ingredients\"].tolist()\n",
@@ -494,17 +492,24 @@
     "    else:\n",
     "        x1 += \"spicy\"\n",
     "        break\n",
+    "\n",
+    "        \n",
     "# print(flavor_p)\n",
     "# print(\"-------\")\n",
-    "print(x1)\n",
+    "# print(x1)\n",
     "# print(\"-------\")\n",
+    "\n",
+    "\n",
     "df =df.replace(\"U4\", x1)\n",
     "\n",
     "if dit_p in non_veg_items :\n",
     "    df =df.replace(\"U3\", \"non vegetarian\")\n",
     "else :\n",
     "    df =df.replace(\"U3\", \"vegetarian\")\n",
+    "\n",
+    "    \n",
     "# print(flavor_p)\n",
+    "\n",
     "\n",
     "df = df.infer_objects(copy=False)\n",
     "print(df.tail(10))"
