--- a/Week - 1/Split_data.ipynb
+++ b/Week - 1/Split_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "bab14e74-813d-4d27-8c31-18ab7c2fa809",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "27fd1f63-0070-4091-8bb6-1f2cd28bac9f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "84e61e39-6bd4-41e8-96c8-b98ffae33d21",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "21aae854-ba2e-469b-af8b-6319bc8a5e35",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "99179b26-144c-4dfb-b23e-075895ad3383",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "1cbc0c0b-a4a1-4c91-ace7-04b1432a8b99",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "46de5c44-9207-4cae-971a-a166c58ec487",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "acc4be64-5a62-4812-a99c-785da49c90dc",
    "metadata": {},
    "outputs": [
@@ -342,20 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "Done\n"
      ]
     }
    ],
@@ -416,7 +403,6 @@
     "\n",
     "for i in id_r :\n",
     "    random_region = random.choice(region_all)\n",
-    "    print()\n",
     "    df.loc[df['food_id'] == i, 'region'] = random_region\n",
     "    \n",
     "for i in id_s :\n",
@@ -437,13 +423,13 @@
     "\n",
     "    df.loc[df['food_id'] == i, 'state'] = random_state\n",
     "    \n",
-    "        \n",
+    "print(\"Done\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "ee434201-5af2-4a67-a578-11590aa1ffa2",
    "metadata": {},
    "outputs": [
@@ -479,7 +465,7 @@
       "245  10.000000  20.000000          spicy  main course            Assam   \n",
       "246  35.636771  38.911894          sweet      dessert            Assam   \n",
       "247  15.000000  50.000000          spicy  main course      West Bengal   \n",
-      "248  35.636771  38.911894          spicy  main course        Karnataka   \n",
+      "248  35.636771  38.911894          spicy  main course  Jammu & Kashmir   \n",
       "249  10.000000  20.000000          spicy  main course      West Bengal   \n",
       "250   5.000000  30.000000          sweet      dessert            Assam   \n",
       "251  20.000000  60.000000          sweet      dessert              Goa   \n",
@@ -491,7 +477,7 @@
       "245  North East  \n",
       "246  North East  \n",
       "247        East  \n",
-      "248       South  \n",
+      "248       North  \n",
       "249        East  \n",
       "250  North East  \n",
       "251        West  \n",
@@ -523,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "b12c35d7-d131-4fe7-91f9-8bb674fff234",
    "metadata": {},
    "outputs": [
