--- a/Week - 2/Split_data.ipynb
+++ b/Week - 2/Split_data.ipynb
@@ -1160,6 +1160,25 @@
     }
    ],
    "source": [
+    "\n",
+    "# ## **4. Split the Dataset**\n",
+    "\n",
+    "# ### **Tasks**\n",
+    "\n",
+    "# Split into:\n",
+    "\n",
+    "# * **70% Train**\n",
+    "# * **15% Validation**\n",
+    "# * **15% Test**\n",
+    "\n",
+    "# ### **What each set is used for**\n",
+    "\n",
+    "# * **Train:** Train the ML model\n",
+    "# * **Validation:** Tune hyperparameters, choose best model\n",
+    "# * **Test:** Final accuracy check\n",
+    "\n",
+    "\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Choose your target\n",
@@ -1239,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7890c719-ad08-4c6c-a802-ada74e92d6e4",
+   "id": "85846d1f-8b8b-484b-9c75-280285d394f6",
    "metadata": {},
    "outputs": [],
    "source": []
