--- a/Week - 2/linear_regression_practical.ipynb
+++ b/Week - 2/linear_regression_practical.ipynb
@@ -341,6 +341,7 @@
     }
    ],
    "source": [
+    "#PHASE 3 — Exploratory Data Analysis (EDA)\n",
     "numeric_features = ['R&D Spend', 'Administration', 'Marketing Spend', 'Profit']\n",
     "for col in numeric_features:\n",
     "    plt.figure()\n",
@@ -464,6 +465,7 @@
     }
    ],
    "source": [
+    "#PHASE 4 — Feature Engineering\n",
     "for col in ['R&D Spend', 'Administration', 'Marketing Spend']:\n",
     "    sns.scatterplot(x=df[col], y=df['Profit'])\n",
     "    plt.title(f\"{col} vs Profit\")\n",
@@ -523,6 +525,7 @@
     }
    ],
    "source": [
+    "#PHASE 5 — Data Splitting\n",
     "X = df_encoded.drop('Profit', axis=1)\n",
     "y = df_encoded['Profit']\n",
     "\n",
@@ -585,6 +588,7 @@
    ],
    "source": [
     "# Coefficients\n",
+    "#PHASE 7 — Model Interpretation\n",
     "coeff_df = pd.DataFrame({'Feature': X.columns, 'Coefficient': lr.coef_})\n",
     "print(coeff_df.sort_values(by='Coefficient', key=abs, ascending=False))\n",
     "\n",
@@ -663,6 +667,7 @@
     }
    ],
    "source": [
+    "#PHASE 8 — Business Insights\n",
     "coeff_df_sorted = coeff_df.reindex(coeff_df['Coefficient'].abs().sort_values(ascending=False).index)\n",
     "print(\"Feature importance:\\n\", coeff_df_sorted)"
    ]
