--- a/Week - 3/Practical/ANN_practical.ipynb
+++ b/Week - 3/Practical/ANN_practical.ipynb
@@ -83,10 +83,10 @@
     "CSV_PATH = 'merged_dataset.csv'   # update if needed\n",
     "FEATURES = ['StudyHours', 'Attendance', 'Motivation', 'ExamScore']  # choose 2-5 features\n",
     "TARGET = 'FinalGrade'\n",
-    "HIDDEN_NEURONS = 5\n",
+    "HIDDEN_NEURONS = 10\n",
     "BATCH_SIZE = 32\n",
     "LEARNING_RATE = 0.01\n",
-    "EPOCHS = 100           # you can increase later\n",
+    "EPOCHS = 200           # you can increase later\n",
     "RANDOM_SEED = 42"
    ]
   },
@@ -423,10 +423,10 @@
     }
    ],
    "source": [
-    "os.makedirs('outputs', exist_ok=True)\n",
-    "torch.save(model.state_dict(), 'outputs/ann_model.pth')\n",
+    "os.makedirs('outputs_ANN', exist_ok=True)\n",
+    "torch.save(model.state_dict(), 'outputs_ANN/ann_model.pth')\n",
     "\n",
-    "report_txt = 'outputs/ann_report.txt'\n",
+    "report_txt = 'outputs_ANN/ann_report.txt'\n",
     "with open(report_txt, 'w') as f:\n",
     "    f.write(\"ANN Student Scores Training Report\\n\")\n",
     "    f.write(f\"Features: {FEATURES}\\nTarget: {TARGET}\\n\")\n",
