--- a/Week - 3/Practical/ANN_practical.ipynb
+++ b/Week - 3/Practical/ANN_practical.ipynb
@@ -532,11 +532,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "547d7f6d-8562-4dce-851c-7506595b2c54",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.9.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.__version__)"
+   ]
   },
   {
    "cell_type": "code",
